# robot

./: .QA.swp  sellticket.cpp
PycharmProjects/7J26J/: getdata_ZTQH_001_01.csv  getdata_ZTQH_001_01_6J.csv  getdata_ZTQH_001_01_6Jold.csv  getdata_ZTQH_001_02.csv  getdata_ZTQH_001_02_6J.csv  getdata_ZTQH_001_02_6jold.csv  getdata_ZTQH_001_03.csv  getdata_ZTQH_001_03_6J.csv  getdata_ZTQH_001_03_6jold.csv  getdata_ZTQH_001_04.csv  getdata_ZTQH_001_04_6J.csv  getdata_ZTQH_001_04_6jold.csv  main.py  test20231.csv
PycharmProjects/pythonProject/: main.py
PycharmProjects/pythonProject1/: main.py
bug/: .cpp  0730c++errorreport.txt  0813c++errorreport.txt  arraynotcheck.cpp  complexbug.txt  strlen.txt
bug/cpp/: proxydemo.cpp
code/: API_homework_FUNC.ori.cpp  API_homework_FUNC_done.cpp123  GOF10.cpp  cpu.cpp  gitstash.cpp  test1  wobjprocess.cpp
code/cppstylerobot/: CMakeLists.txt  DianaApiLog.txt
code/cppstylerobot/include/: DianaAPIDef.h  DianaApiCommon.h  DianaApiSpecial.h  DianaRobot.h  Environment.h
code/cppstylerobot/src/: main.cpp
code/luacode/: Lua 5.4 Reference Manual.html
code/project0612/: CMakeLists.txt
code/project0627/: CMakeLists.txt
code/project100/: CMakeLists.txt
code/projectArray/: CMakeLists.txt
code/projectCallPython/: CMakeLists.txt  a.out  cpphello
code/projectComplex/: CMakeLists.txt
code/projectGDB/: CMakeLists.txt
code/projectGOF/: CMakeLists.txt
code/projectGtest/: CMakeLists.txt
code/projectMQ/: CMakeLists.txt  output.docx
code/projectMQ/src/: 0311cv.cpp  0311cv_1.cpp  0311cvwait.cpp  0311sellticket.cpp  0312cv.cpp  0312producer.cpp  0312sellticket.cpp  0313thread.cpp  0314byturns.cpp  0314classpc.cpp  0314queuebuffer.cpp  0314seq.cpp  0314thread10.cpp  0315MQ1.cpp  0315MQ2.cpp  0319mutex.cpp  DIP  DIP.cpp  FCI_Speedj  GtestDIY.cpp  ModeDeco2025.cpp  ModeImpl2025.cpp  Modestate2025.cpp  SyncQueue.hpp  ThreadPool.hpp  blackboard.cpp  convartest.cpp  cpool.cpp  demofrompdf.cpp  errorCode-0221.docx  errorcode.xml  functiontest.cpp  functiontest1.cpp  geterrorfromxml.cpp  geterrorfromxml.py  geterrorfromxml2.py  getwarningfromxml2.py  gof2025.cpp  link.txt  main.cpp  (+16 more)
code/projectMQ/src/output/: gof2025
code/projectMulinstance/: CMakeLists.txt
code/projectNotifyoneall/: CMakeLists.txt
code/projectPY/: pythontest1.py  tempCodeRunnerFile.py  testString.py
code/projectPolymotism/: CMakeLists.txt
code/projectRepeat2gcount/: CMakeLists.txt
code/projectRepeat2gcount/include/: test01.h
code/projectRepeat2gcount/src/: main.cpp  test01.cpp
code/projectRobot/: CMakeLists.txt  DianaApiLog.txt
code/projectRobotinit/: CMakeLists.txt  DianaApiLog.txt
code/projectRobotinit/2.15/include/: DianaAPIDef.h  DianaApiSpecial.h
code/projectRobotinit/src/: DianaApiLog.txt  main copy.cpp.version1  main.cpp  main.cpp.speedl  main_initSrv.cpp
code/projectSellTicket/: CMakeLists.txt
code/projectString/: CMakeLists.txt
code/projectTest_needcheck/: CMakeLists.txt
code/projectThread/: CMakeLists.txt  projectTemplate (copy.txt
code/projectThread/src/: main.cpp
code/projectTransferFile_Client/: CMakeLists.txt
code/projectTransferFile_Client/src/: client.cpp
code/projectTransferFile_Server/: CMakeLists.txt
code/projectValgrind/: CMakeLists.txt
code/projectautofor/: CMakeLists.txt
code/projectcomplexgermany/: CMakeLists.txt  DianaApiLog.txt
code/projectflagchange/: CMakeLists.txt
code/projectgtest/: CMakeLists.txt  DianaApiLog.txt
code/projectgtest/include/: test_base.h
code/projectgtest/src/: DianaApiLog.txt  fixturetest.cpp  init.cpp  move3plus3.cpp  onlytest.cpp  test_base.cpp
code/projectgtest/src/SRZX/: srzx6.cpp  srzx7.cpp
code/projectgtest/src/fixture/: fixturetest.cpp
code/projectgtest/src/test/: DianaApiLog.txt  init.cpp  onlytest.cpp
code/projectmemory/: CMakeLists.txt
code/projectprintabc/: CMakeLists.txt
code/projectsellticketnew/: CMakeLists.txt
code/projectsignal/: CMakeLists.txt
code/projecttest/: CMakeLists.txt
code/projectvector/: CMakeLists.txt
code/ros2/pythonros2/ros2_ws/install/my_ros2_package/share/my_ros2_package/: package.sh  package.xml
code/sellticket/: sellticket.cpp
code/test/: 123-123.lua  STLasync  STLasync.cpp  STLasyncNew  STLasyncNew.cpp  helloworld.txt  testfuture  testfuture.cpp
doc/: appnotlaunch
info/: .gtestcmakelog.swp  1  chromeinstall  devhelpinstall  encrypt  error.msg  format  freedrive_log  fsearch  gtestcmakelog  gtesterrlog  installinfo  makeerror  makethreaderror  taskori.txt
info/03-freedriving_testdone/RemoteApi/: CMakeLists.txt  base_demo.cpp  logli.tar.xz
info/03-freedriving_testdone/RemoteApi/include/: DianaAPI.h  DianaAPIDef.h  FunctionOptDef.h  environment.h  stdafx.h
info/03-freedriving_testdone/RemoteApi/lib/: DianaApi.py
projectTemplate/: CMakeLists.txt
projectTemplate/include/: Apple.h
projectTemplate/src/: main.cpp
qtproject/TestThreadCmake/: CMakeLists.txt  main.cpp
qtproject/TestThreadQmake/: test1.pro
qtproject/build-TestThread-Desktop-Debug/: CMakeCache.txt  Makefile  TestThread  TestThread.cbp  TestThreadCmake  TestThreadCmake.cbp  cmake_install.cmake
qtproject/build-TestThread-Desktop-Release/: CMakeCache.txt  Makefile  TestThread  TestThread.cbp  cmake_install.cmake
qtproject/build-TestThread-Desktop-Release-with-Debug-Information/: CMakeCache.txt  Makefile  TestThread  TestThread.cbp  cmake_install.cmake
qtproject/build-checksize-Desktop-Debug/: Makefile  checksize
qtproject/qtcmake/: CMakeLists.txt  main.cpp
qtproject/qtcmake/Environment/: .clang-format  lib.tar.xz
qtproject/qtcmake/Environment/base/: case_api.cpp  case_api.h  case_def.h  test_base.cmake  test_base.cpp  test_base.h
qtproject/qtcmake/Environment/include/: DianaAPIDef.h  DianaApiSpecial.h  Environment.h  mlock.h
scripttool/: 1  checklayout.sh  checktime.sh  countdown.sh  createfile.sh  gettime.sh  logintodiana.sh  logintodiana15.sh  logintofirefly.sh  pingnotok.txt  pingok.txt  register_clear.sh  register_read.sh  test=.sh  testbackticks.sh  testif.sh  testifnew.sh  testls  testping.sh  testwhile_error.sh
(+275 files in other folders)
